--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
           "workbench.colorCustomizations": {
                     "activityBar.activeBackground": "#04f93d",
                     "activityBar.background": "#f99f04",
-                    "activityBar.foreground": "#360139",
+                    "activityBar.foreground": "#e606f2",
                     "activityBar.inactiveForeground": "#FFF",
                     "activityBarBadge.background": "#E21717",
                     "activityBarBadge.foreground": "#FFF",
