--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,21 +4,21 @@
                     "activityBar.background": "#f99f04",
                     "activityBar.foreground": "#e606f2",
                     "activityBar.inactiveForeground": "#FFF",
-                    "activityBarBadge.background": "#E21717",
+                    "activityBarBadge.background": "#c7032d99",
                     "activityBarBadge.foreground": "#FFF",
                     "commandCenter.border": "#e9f904",
                     "sash.hoverBorder": "#f96604",
                     "statusBar.background": "#03c731",
-                    "statusBar.border": "#039cc7",
+                    "statusBar.border": "#82c703",
                     "statusBar.foreground": "#FFF",
-                    "statusBarItem.hoverBackground": "#029495",
-                    "statusBarItem.remoteBackground": "#03c6c7",
-                    "statusBarItem.remoteForeground": "#D82E2F",
-                    "titleBar.activeBackground": "#D82E2F",
+                    "statusBarItem.hoverBackground": "#830404",
+                    "statusBarItem.remoteBackground": "#b303c7",
+                    "statusBarItem.remoteForeground": "#2ed886",
+                    "titleBar.activeBackground": "#c7032d99",
                     "titleBar.activeForeground": "#FFF",
                     "titleBar.border": "#03c6c7",
-                    "titleBar.inactiveBackground": "#03c6c799",
-                    "titleBar.inactiveForeground": "#15202b99"
+                    "titleBar.inactiveBackground": "#c7032d99",
+                    "titleBar.inactiveForeground": "#fff"
           },
           "peacock.color": "#03C6C7",
           "cSpell.words": [
